Fix responsive issues on mobile

--- a/Day 15/style.scss
+++ b/Day 15/style.scss
@@ -224,6 +224,7 @@ body{
 }
 @media screen and (max-width: 767px){
     body{
+        background-color: #C4BBA5;
         .mainContainer{
             height: 750px !important;
             width: 100%;
